<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item2"
            android:icon="@drawable/ic_local_shipping_black_24dp"
            android:title="@string/request_a_truck" />
        <item
            android:id="@+id/item3"
            android:icon="@drawable/ic_style_black_24dp"
            android:title="@string/view_orders_1" />
        <item
            android:id="@+id/item4"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/view_quotes_1" />

        <item
            android:id="@+id/item5"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/view_invoices_1" />

        <item
            android:id="@+id/item1"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/about_us" />

        <item
            android:id="@+id/item6"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/item7"
            android:title="@string/legal"
            android:icon="@drawable/ic_gavel" />

        <item
            android:id="@+id/item9"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_privacy" />

        <item
            android:id="@+id/item8"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>
