<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/style_request_truck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up_its_free"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            style="@style/style_request_truck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_user"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boundingbox"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_person_white_24dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_person_white_24dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_person_white_24dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_person_white_24dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_person_white_24dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_person_white_24dp"
            android:hint="@string/company_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_call_white_24dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_call_white_24dp"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_email_white_24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/sign_up"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up" />

</LinearLayout>

