<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/trip_start_time" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="10:50 AM 22 May 2016"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/eta_to_dest" />

    <TextView
        android:id="@+id/estimatedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="22 hours 45 minutes"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/curr_location" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Maruti Udyog Vihar, Gurgoan"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>